feat: Support cluster role

--- a/charts/locust-k8s-operator/values.yaml
+++ b/charts/locust-k8s-operator/values.yaml
@@ -39,6 +39,9 @@ k8s:
   customResourceDefinition:
     deploy: true
 
+  clusterRole:
+    enabled: false
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
