feat!: enable cluster role by default and update resource limit documentation

--- a/charts/locust-k8s-operator/values.yaml
+++ b/charts/locust-k8s-operator/values.yaml
@@ -40,7 +40,7 @@ k8s:
     deploy: true
 
   clusterRole:
-    enabled: false
+    enabled: true
 
 serviceAccount:
   # Specifies whether a service account should be created
