--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,70 +1,85 @@
-name: Publish image & helm
+# This workflow publishes the Docker image and Helm chart when a new tag is pushed.
+name: 🚀 Publish image & helm
 
+# Triggered on a push event for any tag.
 on:
   push:
     tags:
       - "*"
 
 jobs:
+  # Job to publish the Docker image.
   Publish-image:
-    name: Publish image
+    name: 🐳 Publish image
     runs-on: ubuntu-latest
 
     env:
       DOCKER_IMAGE: lotest/${{ github.event.repository.name }}
     steps:
-      - name: Checkout repo
+      # Step 1: Checks out the repository code.
+      - name: 📂 Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      # Step 2: Sets up JDK 21.
+      - name: ☕ Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: 21
           distribution: temurin
 
-      - name: Setup Gradle
+      # Step 3: Sets up Gradle.
+      - name: 🛠️ Setup Gradle
         uses: gradle/gradle-build-action@v3.5.0
 
-      - name: Build docker image
+      # Step 4: Builds the Docker image using Jib.
+      - name: 📦 Build docker image
         run: ./gradlew jibDockerBuild -i --image $DOCKER_IMAGE
 
-      - name: Login to Docker Hub
+      # Step 5: Logs in to Docker Hub.
+      - name: 🔐 Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push image to repository
+      # Step 6: Pushes the image to the Docker repository.
+      - name: 🚢 Push image to repository
         run: docker push --all-tags $DOCKER_IMAGE
 
+  # Job to publish the Helm chart.
   helm-chart-release:
-    name: Publish Helm chart
+    name: 🌊 Publish Helm chart
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
-      - name: Checkout
+      # Step 1: Checks out the repository code.
+      - name: 📂 Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Configure Git
+      # Step 2: Configures Git with the user name and email.
+      - name: ✍️ Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: Install Helm
+      # Step 3: Installs Helm.
+      - name: 🌊 Install Helm
         uses: azure/setup-helm@v4
         with:
           version: v3.10.0
 
-      - name: Custom packaging
+      # Step 4: Packages the Helm chart with the release version.
+      - name: 📦 Custom packaging
         run: |
           VERSION=${{github.ref_name}}
           rm -rf .cr-release-packages
           mkdir -p .cr-release-packages
           helm package charts/locust-k8s-operator --app-version=${VERSION} --version=${VERSION} --destination=.cr-release-packages
 
-      - name: Run chart-releaser
+      # Step 5: Runs the chart-releaser to publish the chart.
+      - name: 🎉 Run chart-releaser
         # switch back to helm/chart-releaser-action when https://github.com/helm/chart-releaser-action/pull/109 is merged
         # Waiting for a new release to include changes coming from https://github.com/helm/chart-releaser-action/commit/38cfeacdbbd62d13ec773fcdee1435ff5846c554
         uses: askcloudarchitech/chart-releaser-action@skip-packaging-option
@@ -73,34 +88,40 @@ jobs:
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
+  # Job to publish the documentation.
   docs-release:
-    name: Publish documentation
+    name: 📚 Publish documentation
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
-      - name: Checkout
+      # Step 1: Checks out the repository code.
+      - name: 📂 Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup python
+      # Step 2: Sets up Python.
+      - name: 🐍 Setup python
         uses: actions/setup-python@v5
         with:
           python-version: 3.x
 
-      - name: Install dependencies
+      # Step 3: Installs documentation dependencies.
+      - name: 📦 Install dependencies
         run: |
           pip install \
           mkdocs-material \
           mkdocs-git-revision-date-localized-plugin
 
-      - name: Build documentation
+      # Step 4: Builds the documentation.
+      - name: 🚀 Build documentation
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           python -m mkdocs build
 
-      - name: Deploy documentation
+      # Step 5: Deploys the documentation.
+      - name: 🚀 Deploy documentation
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
