feat: add integration test support for Locust K8s Operator

--- a/build.gradle
+++ b/build.gradle
@@ -50,3 +50,4 @@ apply from: "${rootDir}/gradle/testing.gradle"
 apply from: "${rootDir}/gradle/spotless.gradle"
 apply from: "${rootDir}/gradle/jib.gradle"
 apply from: "${rootDir}/gradle/jacoco.gradle"
+apply from: "${rootDir}/gradle/integration-test.gradle"
