docs: add GitHub Actions workflow for documentation preview deployment

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 
 # Project information
 site_name: Locust Kubernetes Operator
-site_author: Abdelrhman hamouda
+site_author: Abdelrhman Hamouda
 site_description: Locust kubernetes operator documentation.
 
 # Repository
@@ -11,7 +11,7 @@ repo_url: https://github.com/AbdelrhmanHamouda/locust-k8s-operator
 
 # Copyright
 copyright: >
-  Copyright &copy; 2023 Abdelrhman Hamouda –
+  Copyright &copy; 2025 Abdelrhman Hamouda –
   <a href="#__consent">Change cookie settings</a>
 
 # Plugins
