--- a/locust-k8s-operator-go/config/crd/bases/locust.io_locusttests.yaml
+++ b/locust-k8s-operator-go/config/crd/bases/locust.io_locusttests.yaml
@@ -11,10 +11,28 @@ spec:
     kind: LocustTest
     listKind: LocustTestList
     plural: locusttests
+    shortNames:
+    - lotest
     singular: locusttest
   scope: Namespaced
   versions:
-  - name: v1
+  - additionalPrinterColumns:
+    - description: Master pod command seed
+      jsonPath: .spec.masterCommandSeed
+      name: master_cmd
+      type: string
+    - description: Number of requested worker pods
+      jsonPath: .spec.workerReplicas
+      name: worker_replica_count
+      type: integer
+    - description: Locust image
+      jsonPath: .spec.image
+      name: Image
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1
     schema:
       openAPIV3Schema:
         description: LocustTest is the Schema for the locusttests API.
@@ -39,10 +57,130 @@ spec:
           spec:
             description: LocustTestSpec defines the desired state of LocustTest.
             properties:
-              foo:
-                description: Foo is an example field of LocustTest. Edit locusttest_types.go
-                  to remove/update
+              affinity:
+                description: Affinity defines affinity rules for pod scheduling.
+                properties:
+                  nodeAffinity:
+                    description: NodeAffinity defines node affinity rules.
+                    properties:
+                      requiredDuringSchedulingIgnoredDuringExecution:
+                        additionalProperties:
+                          type: string
+                        description: |-
+                          RequiredDuringSchedulingIgnoredDuringExecution defines required node affinity rules.
+                          The map keys are label keys and values are label values that nodes must have.
+                        type: object
+                    type: object
+                type: object
+              annotations:
+                description: Annotations defines annotations to attach to deployed
+                  pods.
+                properties:
+                  master:
+                    additionalProperties:
+                      type: string
+                    description: Master defines annotations attached to the master
+                      pod.
+                    type: object
+                  worker:
+                    additionalProperties:
+                      type: string
+                    description: Worker defines annotations attached to worker pods.
+                    type: object
+                type: object
+              configMap:
+                description: ConfigMap is the name of the ConfigMap containing the
+                  test file(s).
                 type: string
+              image:
+                description: Image is the Locust container image to use.
+                type: string
+              imagePullPolicy:
+                description: ImagePullPolicy defines when to pull the image.
+                enum:
+                - Always
+                - IfNotPresent
+                - Never
+                type: string
+              imagePullSecrets:
+                description: ImagePullSecrets is a list of secret names for pulling
+                  images from private registries.
+                items:
+                  type: string
+                type: array
+              labels:
+                description: Labels defines labels to attach to deployed pods.
+                properties:
+                  master:
+                    additionalProperties:
+                      type: string
+                    description: Master defines labels attached to the master pod.
+                    type: object
+                  worker:
+                    additionalProperties:
+                      type: string
+                    description: Worker defines labels attached to worker pods.
+                    type: object
+                type: object
+              libConfigMap:
+                description: LibConfigMap is the name of the ConfigMap containing
+                  lib directory files.
+                type: string
+              masterCommandSeed:
+                description: |-
+                  MasterCommandSeed is the command seed for the master pod.
+                  This forms the base of the locust master command.
+                type: string
+              tolerations:
+                description: Tolerations defines tolerations for pod scheduling.
+                items:
+                  description: LocustTestToleration defines a toleration for pod scheduling.
+                  properties:
+                    effect:
+                      description: Effect indicates the taint effect to match.
+                      enum:
+                      - NoSchedule
+                      - PreferNoSchedule
+                      - NoExecute
+                      type: string
+                    key:
+                      description: Key is the taint key that the toleration applies
+                        to.
+                      type: string
+                    operator:
+                      description: Operator represents the relationship between the
+                        key and value.
+                      enum:
+                      - Exists
+                      - Equal
+                      type: string
+                    value:
+                      description: Value is the taint value the toleration matches
+                        to.
+                      type: string
+                  required:
+                  - effect
+                  - key
+                  - operator
+                  type: object
+                type: array
+              workerCommandSeed:
+                description: |-
+                  WorkerCommandSeed is the command seed for worker pods.
+                  This forms the base of the locust worker command.
+                type: string
+              workerReplicas:
+                default: 1
+                description: WorkerReplicas is the number of worker pods to spawn.
+                format: int32
+                maximum: 500
+                minimum: 1
+                type: integer
+            required:
+            - image
+            - masterCommandSeed
+            - workerCommandSeed
+            - workerReplicas
             type: object
           status:
             description: LocustTestStatus defines the observed state of LocustTest.
