feat: implement core reconciler for LocustTest CR
- Add Reconcile() with NO-OP on updates (generation > 1)
- Add createResources() to build and create Service + Jobs
- Add createResource() helper with owner references
- Wire config and event recorder in main.go
- Add RBAC for jobs, services, and events
- Configure controller with Owns() and GenerationChangedPredicate

--- a/locust-k8s-operator-go/config/rbac/role.yaml
+++ b/locust-k8s-operator-go/config/rbac/role.yaml
@@ -5,6 +5,33 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
+  - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - watch
+- apiGroups:
+  - batch
+  resources:
+  - jobs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - watch
+- apiGroups:
   - locust.io
   resources:
   - locusttests
