feat: implement v1↔v2 conversion webhook with E2E tests
- Add Hub() marker to v2 LocustTest
- Implement ConvertTo/ConvertFrom in v1
- Mark v2 as storage version
- Add deprecation warning to v1
- Add conversion unit tests (15 tests)
- Add E2E tests for webhook in Kind cluster (7 tests)
- Configure cert-manager and webhook kustomize
- Generate webhook configuration

--- a/locust-k8s-operator-go/config/crd/bases/locust.io_locusttests.yaml
+++ b/locust-k8s-operator-go/config/crd/bases/locust.io_locusttests.yaml
@@ -32,10 +32,12 @@ spec:
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
+    deprecated: true
+    deprecationWarning: locust.io/v1 LocustTest is deprecated, migrate to locust.io/v2
     name: v1
     schema:
       openAPIV3Schema:
-        description: LocustTest is the Schema for the locusttests API.
+        description: LocustTest is the Schema for the locusttests API (v1 - DEPRECATED).
         properties:
           apiVersion:
             description: |-
@@ -187,7 +189,7 @@ spec:
             type: object
         type: object
     served: true
-    storage: true
+    storage: false
     subresources:
       status: {}
   - additionalPrinterColumns:
@@ -3627,6 +3629,6 @@ spec:
             type: object
         type: object
     served: true
-    storage: false
+    storage: true
     subresources:
       status: {}
