--- a/locust-k8s-operator-go/Makefile
+++ b/locust-k8s-operator-go/Makefile
@@ -113,8 +113,14 @@ tidy: ## Run go mod tidy
 	go mod tidy
 
 .PHONY: test
-test: manifests generate fmt vet setup-envtest ## Run tests.
+test: manifests generate fmt vet setup-envtest generate-test-crds ## Run tests.
 	KUBEBUILDER_ASSETS="$(shell $(ENVTEST) use $(ENVTEST_K8S_VERSION) --bin-dir $(LOCALBIN) -p path)" go test $$(go list ./... | grep -v /e2e) -coverprofile cover.out
+
+.PHONY: generate-test-crds
+generate-test-crds: kustomize manifests ## Generate v1-only CRD for integration tests (no conversion webhook needed).
+	cp config/crd/bases/locust.io_locusttests.yaml config/crd/test/base.yaml
+	$(KUSTOMIZE) build config/crd/test > config/crd/test/locust.io_locusttests.yaml
+	rm config/crd/test/base.yaml
 
 # TODO(user): To use a different vendor for e2e tests, modify the setup under 'tests/e2e'.
 # The default setup assumes Kind is pre-installed and builds/loads the Manager Docker image locally.
