--- a/locust-k8s-operator-go/config/webhook/manifests.yaml
+++ b/locust-k8s-operator-go/config/webhook/manifests.yaml
@@ -1,15 +1,26 @@
-apiVersion: v1
-kind: Service
+---
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingWebhookConfiguration
 metadata:
-  labels:
-    app.kubernetes.io/name: locust-k8s-operator
-    app.kubernetes.io/managed-by: kustomize
-  name: webhook-service
-  namespace: system
-spec:
-  ports:
-  - port: 443
-    protocol: TCP
-    targetPort: 9443
-  selector:
-    control-plane: controller-manager
+  name: validating-webhook-configuration
+webhooks:
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-locust-io-v2-locusttest
+  failurePolicy: Fail
+  name: vlocusttest-v2.kb.io
+  rules:
+  - apiGroups:
+    - locust.io
+    apiVersions:
+    - v2
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - locusttests
+  sideEffects: None
